bugfix and smaller li items on smaller screens

--- a/client/src/components/Navbar/Searchbar.module.scss
+++ b/client/src/components/Navbar/Searchbar.module.scss
@@ -12,19 +12,18 @@
     border-radius: 20px;
     margin: auto;
     font-size: 1rem;
-  }
+    &[type="text"] {
+      padding-left: 10px;
+    }
 
-  input[type="text"] {
-    padding-left: 10px;
-  }
+    &:focus {
+      outline: none;
+    }
 
-  input:focus {
-    outline: none;
-  }
-
-  input::placeholder {
-    text-align: center;
-    padding: 10px;
+    &::placeholder {
+      text-align: center;
+      padding: 10px;
+    }
   }
 }
 
